rework blog grid

--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,10 @@
             </a>
             <!-- menu de navegacion -->
             <nav class="header__nav">
+
+                <input type="checkbox" id="menu">
+                <label for="menu"><i class="fas fa-bars"></i></label>
+
                 <ul class="ul__nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="galeria.html">Gallery</a></li>
@@ -43,57 +47,86 @@
             <!-- boton dark -->
             <!-- <input type="button" value="Dark Mode"> -->
         </div>
+
     </header>
 
+    <main class="mainBlog">
+
+        <h1 class="tittle-blog">Blog CodeRack</h1>
+
+        <div class="notificacionPpal">
+            <div class="notificacionPpal__img"></div>
+            <p>ADMINISTRATOR NOTIFICATION:Remember that at coder house we are constantly working, therefore this website
+                is constantly being updated in order to improve the experience of our users, this is a global message
+                which announces changes and news and information related to us.</p>
+        </div>
+
+        <div class="mainBlog__blog">
+            <div class="contenedoArticulos">
+                <h2>ARTICULOS DE LOS USUARIOS</h2>
+                <article class="articulo1 separador">
+                    <div class="articulo1__header user__img"></div>
+                    <div class="articulo1__contenido">Furthermore, being a developer isn’t just about knowing how to
+                        code – it’s about knowing how to use the tools of the trade, specifically developer tools.
+                        Reading tutorials and learning about all their different features could also help you get ahead
+                        in your career.</div>
+                    <div class="articulo1__footer">User: Usuario001</div>
+                </article>
+
+                <article class="articulo2 separador">
+                    <div class="articulo1__header user__img"></div>
+                    <div class="articulo1__contenido">Furthermore, being a developer isn’t just about knowing how to
+                        code – it’s about knowing how to use the tools of the trade, specifically developer tools.
+                        Reading tutorials and learning about all their different features could also help you get ahead
+                        in your career.</div>
+                    <div class="articulo1__footer">User: Usuario002</div>
+                </article>
+
+                <article class="articulo3 separador">
+                    <div class="articulo1__header user__img"></div>
+                    <div class="articulo1__contenido">Furthermore, being a developer isn’t just about knowing how to
+                        code – it’s about knowing how to use the tools of the trade, specifically developer tools.
+                        Reading tutorials and learning about all their different features could also help you get ahead
+                        in your career.</div>
+                    <div class="articulo1__footer">User: Usuario003</div>
+                </article>
+            </div>
+            <aside class="aside">
+                <h2>TITULO ASIDE</h2>
+                <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dicta minus ipsa esse
+                    reprehenderit amet tenetur hic assumenda alias cum aliquam, voluptatem repudiandae. Rem harum
+                    repellat tempore laboriosam corporis maxime Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Similique cumque voluptates quis laudantium voluptatem id aliquam quam ratione pariatur vel
+                    exercitationem ullam, fugiat possimus non sed provident dolore voluptatum nemo?</P>
+                <h2>TITULO2 ASIDE</h2>
+                <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dicta minus ipsa esse
+                    reprehenderit amet tenetur hic assumenda alias cum aliquam, voluptatem repudiandae. Rem harum
+                    repellat tempore laboriosam corporis maxime Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Similique cumque voluptates quis laudantium voluptatem id aliquam quam ratione pariatur vel
+                    exercitationem ullam, fugiat possimus non sed provident dolore voluptatum nemo?</P>
+                <h2>TITULO3 ASIDE</h2>
+                <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dicta minus ipsa esse
+                    reprehenderit amet tenetur hic assumenda alias cum aliquam, voluptatem repudiandae. Rem harum
+                    repellat tempore laboriosam corporis maxime Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Similique cumque voluptates quis laudantium voluptatem id aliquam quam ratione pariatur vel
+                    exercitationem ullam, fugiat possimus non sed provident dolore voluptatum nemo?</P>
+                <h2>TITULO4 ASIDE</h2>
+                <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dicta minus ipsa esse
+                    reprehenderit amet tenetur hic assumenda alias cum aliquam, voluptatem repudiandae. Rem harum
+                    repellat tempore laboriosam corporis maxime Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Similique cumque voluptates quis laudantium voluptatem id aliquam quam ratione pariatur vel
+                    exercitationem ullam, fugiat possimus non sed provident dolore voluptatum nemo?</P>
+            </aside>
+
+        </div>
 
 
-    <h1 class="tittle-blog">BLOG</h1>
-    <section class="coderack-article">
-        <article>
-            <img src="img/16.jpg" alt="">
-            <h2>Coderack Article</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi minus
-                repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.</p>
-        </article>
-    </section>
 
-    <section>
-        <main>
-            <article class="user-article">
-                <img src="img/17.jpg" alt="">
-                <h2>User Article1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi
-                    minus repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.
-                </p>
-            </article>
-            <article class="user-article">
-                <img src="img/17.jpg" alt="">
-                <h2>User Article2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi
-                    minus repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.
-                </p>
-            </article>
-            <article class="user-article">
-                <img src="img/17.jpg" alt="">
-                <h2>User Article3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi
-                    minus repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.
-                </p>
-            </article>
-        </main>
-    </section>
 
-    <aside>
-        <h2>Aside Article1</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi minus
-            repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.</p>
-        <h2>Aside Article2</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi minus
-            repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.</p>
-        <h2>Aside Article3</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quis atque eos, ex sunt hic illum animi minus
-            repellendus commodi tempora nihil est ad omnis aspernatur perferendis qui ipsa. Repellendus.</p>
-    </aside>
+
+
+
+    </main>
 
 
     <footer>
