--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn+SC:wght@400;600;700;900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
-    <title>Home CodeRack</title>
+    <title>Our CodeRack</title>
 </head>
 
 <body>
@@ -32,49 +32,47 @@
             </a>
             <!-- menu de navegacion -->
             <nav class="header__nav">
+
+                <input type="checkbox" id="menu">
+                <label for="menu"><i class="fas fa-bars"></i></label>
+
                 <ul class="ul__nav">
-                    <li><a href="index.html">Home</a></li>
+                    <li class="activo"><a href="index.html">Home</a></li>
                     <li><a href="galeria.html">Gallery</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contact</a></li>
-                    <li class="activo"><a href="nosotros.html">About</a></li>
+                    <li><a href="nosotros.html">About</a></li>
                 </ul>
             </nav>
             <!-- boton dark -->
             <!-- <input type="button" value="Dark Mode"> -->
         </div>
-
     </header>
 
 
     <section class="about">
         <img src="img/19.png" alt="imagen about">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error in maxime blanditiis corrupti, vero doloribus
-            provident perspiciatis maiores, illum eligendi fugit aperiam atque quasi eveniet tempora iste
-            necessitatibus! Delectus, aut Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit neque
+            provident perspiciatis maiores, illum eligendi fugit aperiam atque quasi eveniet tempora istenecessitatibus!
+            Delectus, aut Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit neque
             distinctio excepturi sapiente hic beatae dolorem, illo porro quo cum ad, minima provident ab alias, animi
             dolorum. Quam, magnam dicta.</p>
+
+        <div class="about_2">
+            <img class="about__img40 about__ImgWidth" src="img/20.jpg" alt="codigo">
+            <img class="about__img40 about__ImgWidth" src="img/21.png" alt="codigo">
+        </div>
+
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error in maxime blanditiis corrupti, vero doloribus
             provident perspiciatis maiores, illum eligendi fugit aperiam atque quasi eveniet tempora iste
             necessitatibus! Delectus, aut Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit neque
             distinctio excepturi sapiente hic beatae dolorem, illo porro quo cum ad, minima provident ab alias, animi
             dolorum. Quam, magnam dicta.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error in maxime blanditiis corrupti, vero doloribus
-            provident perspiciatis maiores, illum eligendi fugit aperiam atque quasi eveniet tempora iste
-            necessitatibus! Delectus, aut Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit neque
-            distinctio excepturi sapiente hic beatae dolorem, illo porro quo cum ad, minima provident ab alias, animi
-            dolorum. Quam, magnam dicta.</p>
-        <img class="about__img40" src="img/20.jpg" alt="codigo"> <br>
-        <img class="about__img40" src="img/21.png" alt="codigo">
-        </p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error in maxime blanditiis corrupti, vero doloribus
-            provident perspiciatis maiores, illum eligendi fugit aperiam atque quasi eveniet tempora iste
-            necessitatibus! Delectus, aut Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit neque
-            distinctio excepturi sapiente hic beatae dolorem, illo porro quo cum ad, minima provident ab alias, animi
-            dolorum. Quam, magnam dicta.</p>
-            <img class="about__img25" src="img/21.png" alt="codigo"><br>
-            <img class="about__img25" src="img/21.png" alt="codigo"><br>
-            <img class="about__img25" src="img/21.png" alt="codigo"><br>
+        <div class="about_3">
+            <img class="about__img25 about__ImgWidth" src="img/about3.png" alt="codigo"><br>
+            <img class="about__img25 about__ImgWidth" src="img/about4.webp" alt="codigo"><br>
+            <img class="about__img25 about__ImgWidth" src="img/about5.png" alt="codigo"><br>
+        </div>
     </section>
 
 
