--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn+SC:wght@400;600;700;900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
-    <title>Home CodeRack</title>
+    <title>Contact CodeRack</title>
 </head>
 
 <body>
