--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
 
         <div class="notificacionPpal">
             <div class="notificacionPpal__img"></div>
-            <p>ADMINISTRATOR NOTIFICATION:Remember that at coder house we are constantly working, therefore this website
+            <p>ADMINISTRATOR NOTIFICATION: <br> Remember that at coder house we are constantly working, therefore this website
                 is constantly being updated in order to improve the experience of our users, this is a global message
                 which announces changes and news and information related to us.</p>
         </div>
