--- a/contacto.html
+++ b/contacto.html
@@ -52,7 +52,7 @@
         <div class="seccion-video">
             <video class="header__video" src="media/ident_lg.mp4" autoplay loop muted>
             </video>
-            <h3 class="header__text">Well done is better than well said...</h3>
+            <h3 class="header__text1">Well done is better than well said...</h3>
         </div>
     </header>
 
