--- a/nosotros.html
+++ b/nosotros.html
@@ -37,11 +37,11 @@
                 <label for="menu"><i class="fas fa-bars"></i></label>
 
                 <ul class="ul__nav">
-                    <li class="activo"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="galeria.html">Gallery</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contact</a></li>
-                    <li><a href="nosotros.html">About</a></li>
+                    <li class="activo"><a href="nosotros.html">About</a></li>
                 </ul>
             </nav>
             <!-- boton dark -->
