Add Modal Window - Form Autentication - Some Efects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- HEADER INICIO -->
     <header class="container d-flex justify-content-center mt-5">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center logo">
             <a class="linkheader" href="index.html"><img class="header-logo" src="img/logo.png" alt="logoImagen">
                 <h1 class="fw-bold">
                     Code <span class="text-white fw-bold">Rack</span>
@@ -49,11 +49,11 @@
 
                 <div id="navegacion" class="collapse navbar-collapse">
                     <nav class="navbar-nav container d-flex flex-md-row text-center justify-content-md-between pt-3">
-                        <a class="activa text-dark text-decoration-none fw-bold mb-2" href="index.html">Home</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="galeria.html">Gallery</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="blog.html">Blog</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="contacto.html">Contact</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="nosotros.html">About</a>
+                        <a class="activa text-dark text-decoration-none fw-bold mb-2 ns-1" href="index.html">Home</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="galeria.html">Gallery</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="blog.html">Blog</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="contacto.html">Contact</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="nosotros.html">About</a>
                     </nav>
                 </div>
             </div>
