--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
 <body>
     <!-- HEADER INICIO -->
     <header class="container d-flex justify-content-center mt-5">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center logo">
             <a class="linkheader" href="index.html"><img class="header-logo" src="img/logo.png" alt="logoImagen">
                 <h1 class="fw-bold">
                     Code <span class="text-white fw-bold">Rack</span>
@@ -49,11 +49,11 @@
 
                 <div id="navegacion" class="collapse navbar-collapse">
                     <nav class="navbar-nav container d-flex flex-md-row text-center justify-content-md-between pt-3">
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="index.html">Home</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="galeria.html">Gallery</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="blog.html">Blog</a>
-                        <a class="activa text-dark text-decoration-none fw-bold mb-2" href="contacto.html">Contact</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="nosotros.html">About</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="index.html">Home</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="galeria.html">Gallery</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="blog.html">Blog</a>
+                        <a class="activa text-dark text-decoration-none fw-bold mb-2 ns-1" href="contacto.html">Contact</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="nosotros.html">About</a>
                     </nav>
                 </div>
             </div>
@@ -78,29 +78,35 @@
                         <legend class="bg-primary text-center text-white fs-2 fw-bold">Your Info</legend>
                         <div class="mb-3">
                             <label class="form-label" for="nombre">Name</label>
-                            <input class="form-control estiloInput" id="nombre" type="text" placeholder="Your name... 'Required'"
+                            <input class="form-control estiloInput" id="nombre" type="text" placeholder="Your name... '"
                                 required>
-                            <span class="invalid-feedback">Error...</span>
-                            <span class="valid-feedback">Nice!!</span>
+                            <span class="invalid-feedback">you must fill in all the fields...</span>
+                            <span class="valid-feedback">Good!!</span>
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="asunto">Texts</label>
-                            <input class="form-control estiloInput" id="asunto" type="text" placeholder="Tu Asunto..."
+                            <input class="form-control estiloInput" id="asunto" type="text" placeholder="Your issue..."
                                 required>
-                            <span class="invalid-feedback">Error....</span>
+                                <span class="invalid-feedback">you must fill in all the fields...</span>
+                                <span class="valid-feedback">Good!!</span>
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="email">E-Mail</label>
-                            <input class="form-control estiloInput" id="email" type="email" placeholder="Your E-Mail...">
-                            <span class="valid-feedback">Nice!!</span>
+                            <input class="form-control estiloInput" id="email" type="email" placeholder="Your E-Mail..." required>
+                            <span class="invalid-feedback">you must fill in all the fields...</span>
+                            <span class="valid-feedback">Good!!</span>
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="tel">Telephone Number</label>
-                            <input class="form-control estiloInput" id="tel" type="tel" placeholder="Number...">
+                            <input class="form-control estiloInput" id="tel" type="tel" placeholder="Number..." required>
+                            <span class="invalid-feedback">you must fill in all the fields...</span>
+                            <span class="valid-feedback">Good!!</span>
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="TxtArea">Message</label>
-                            <textarea class="form-control" id="TxtArea" rows="10"></textarea>
+                            <textarea class="form-control" id="TxtArea" rows="10" required></textarea>
+                            <span class="invalid-feedback">you must fill in all the fields...</span>
+                            <span class="valid-feedback">Good!!</span>
                         </div>
                     </fieldset>
 
@@ -174,6 +180,8 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
 
+
+    <!-- AUTENTICACION DEL FORMULARIO MEDIANTE BOOTSTRAP -->
     <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (function () {
