--- a/galeria.html
+++ b/galeria.html
@@ -15,6 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <!-- Fuentes -->
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn+SC:wght@400;600;700;900&display=swap"
         rel="stylesheet">
@@ -25,7 +27,7 @@
 <body>
     <!-- HEADER INICIO -->
     <header class="container d-flex justify-content-center mt-5">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center logo">
             <a class="linkheader" href="index.html"><img class="header-logo" src="img/logo.png" alt="logoImagen">
                 <h1 class="fw-bold">
                     Code <span class="text-white fw-bold">Rack</span>
@@ -49,11 +51,12 @@
 
                 <div id="navegacion" class="collapse navbar-collapse">
                     <nav class="navbar-nav container d-flex flex-md-row text-center justify-content-md-between pt-3">
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="index.html">Home</a>
-                        <a class="activa text-dark text-decoration-none fw-bold mb-2" href="galeria.html">Gallery</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="blog.html">Blog</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="contacto.html">Contact</a>
-                        <a class="text-dark text-decoration-none fw-bold mb-2" href="nosotros.html">About</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="index.html">Home</a>
+                        <a class="activa text-dark text-decoration-none fw-bold mb-2 ns-1"
+                            href="galeria.html">Gallery</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="blog.html">Blog</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="contacto.html">Contact</a>
+                        <a class="text-dark text-decoration-none fw-bold mb-2 ns-1" href="nosotros.html">About</a>
                     </nav>
                 </div>
             </div>
@@ -65,53 +68,178 @@
         <video class="video" src="media/ident_lg.mp4" autoplay loop muted></video>
     </div>
 
+    <!-- galeria -->
+    <main class="container-xl py-5">
+        <h2 class="text-center text-uppercase mb-5 titulo-galeria">Some of our projects</h2>
+        <div class="d-flex justify-content-center pb-5 mb-5 border-bottom">
+            <iframe width="760" height="415" src="https://www.youtube.com/embed/sklF74OW3eI"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <h2 class="text-center my-5 display-3">Galería</h2>
 
-
-    <main class="mx-2 mx-sm-5">
-        <!-- SECCION1 -->
-        <div class="container-xl px-5 py-5 seccion1">
-            <h2 class="text-center text-uppercase mb-5 titulo-galeria">Some of our projects</h2>
-
-            <div class="d-flex justify-content-center pb-5 mb-5 border-bottom">
-            <iframe width="760" height="415" src="https://www.youtube.com/embed/sklF74OW3eI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-            <div class="row mb-4 border-bottom gridGaleria">
-                <h2 class="text-center text-uppercase mb-5 titulo-galeria">Gallery</h2>
-                <div class="col-md-6 col-lg-4 mb-4">
+        <ul class="row list-unstyled galeria">
+            <li class="col-md-6 col-lg-4 mb-4">
+                <!-- primer data: QUIERO USAR EL API MODAL      segundo data:EN QUE PARTE DEL HTML SE UBICA PARA MOSTRAR MODAL -->
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-1" data-PropiedadCustom="galeria_01">
+                    <!-- se rodea la imagen para poner el modal -->
                     <img class="img-fluid" src="img/7.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">Resposive Web Design</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-2" data-PropiedadCustom="galeria_02">
                     <img class="img-fluid" src="img/8.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">App developments</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-3" data-PropiedadCustom="galeria_03">
                     <img class="img-fluid" src="img/9.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">UX Designs</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-4" data-PropiedadCustom="galeria_04">
                     <img class="img-fluid" src="img/10.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">Net Services</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-5" data-PropiedadCustom="galeria_05">
                     <img class="img-fluid" src="img/11.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">Efficient workers</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-6" data-PropiedadCustom="galeria_06">
                     <img class="img-fluid" src="img/12.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">Marketing Services</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-7" data-PropiedadCustom="galeria_07">
                     <img class="img-fluid" src="img/13.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
+                    <p class="text-center">Mobile Designs</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-8" data-PropiedadCustom="galeria_08">
                     <img class="img-fluid" src="img/14.jpg" alt="imagen galeria">
-                </div>
-                <div class="col-md-6 offset-md-3 offset-lg-0 col-lg-4 mb-4">
+                    <p class="text-center">Interesting work</p>
+                </a>
+            </li>
+            <li class="col-md-6 col-lg-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#modal-imagen-9" data-PropiedadCustom="galeria_09">
                     <img class="img-fluid" src="img/15.jpg" alt="imagen galeria">
+                    <p class="text-center">Clean Code</p>
+                </a>
+            </li>
+        </ul>
+    </main>
+
+    <!-- ventana modal con bootstrap -->
+    <div class="modal fade" id="modal-imagen-1">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/7.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
                 </div>
             </div>
-            <h2 class="text-center text-uppercase mb-3 mt-5 titulo-galeria">Quality and fast working</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quasi incidunt cum nihil quis earum neque excepturi autem cupiditate. Sint quis explicabo possimus facere tempore minima soluta aperiam odio corrupti. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui nam eos porro aliquid optio blanditiis modi, incidunt repudiandae aspernatur non atque accusantium, harum perspiciatis ad saepe sapiente assumenda eligendi ratione!</p>
-
-
         </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-2">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/8.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-3">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/9.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-4">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/10.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-5">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/11.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-6">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/12.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-7">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/13.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-8">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/14.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-imagen-9">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-fluid d-block mx-auto" src="img/15.jpg" alt="imagen galeria">
+                    <i data-bs-dismiss="modal" class="pt-5 bi bi-x-circle fs-1 btnModal"></i>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    </main>
+
+
+
+
+
+
+
+
+
 
     <!-- FOOTER -->
     <footer class="mt-5 mb-3">
