--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- SECCION3 -->
             <div class="d-flex flex-column justify-content-center contenedorBotonIndex">
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-danger btn-lg botonIndex mx-auto" href="#">Conoce mas de nosotros</a>
+                    <a class="btn btn-danger btn-lg botonIndex mx-auto" href="#">More of Us</a>
                 </div>
                 <div class="lineaBtn"></div>
                 <p class="textoSeccion3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eius commodi
