Modify SASS, Add SEO

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Blog CodeRack</title>
+    <meta name="description" content="Coderack is a company which is based on clean and efficient code, hire us to design and improve your website.">
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
 </head>
 
 <body>
