--- a/contacto.html
+++ b/contacto.html
@@ -20,6 +20,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Contact CodeRack</title>
+    <meta name="description" content="Contact coderack.">
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
 </head>
 
 <body>
