--- a/galeria.html
+++ b/galeria.html
@@ -23,6 +23,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Gallery CodeRack</title>
+    <meta name="description" content="Coderack Gallery where you can see some of our projects.">
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
 </head>
 
 <body>
