Modify Comments, Styles etc

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Blog CodeRack</title>
     <meta name="description" content="Coderack is a company which is based on clean and efficient code, hire us to design and improve your website.">
-    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder, info, post, blog, entry"/>
 </head>
 
 <body>
@@ -69,13 +69,15 @@
 
 
 
-    <main class="mx-2 mx-sm-5">
+    <main class="container-xl py-5">
         <!-- SECCION1 -->
         <div class="container-xl px-5 py-5 mb-5 seccion1 border-bottom">
             <h2 class="text-center text-uppercase mb-5 titulo-galeria border-bottom pb-3">Blog</h2>
+
+            <!-- SECCION ADMIN-->
             <div class="row mb-5 pb-5 border-bottom">
                 <div class="col-md-4 d-flex justify-content-center align-items-center mb-5 mb-md-0">
-                    <img class="img-fluid" src="img/admin.png" alt="">
+                    <img class="img-fluid" src="img/admin.png" alt="imagen admin">
                 </div>
                 <div class="col-md-8 d-flex justify-content-center align-items-center">
                     <p><span class="fw-bold">ADMINISTRATOR NOTIFICATION:</span><br>Remember that at coder house we are
@@ -85,11 +87,13 @@
                         which announces changes and news and information related to us.</p>
                 </div>
             </div>
+
+            <!-- SECCION USER-->
             <div class="row mt-5">
                 <div class="col-md-8">
                     <article class="border-bottom mb-5">
                         <div class="d-flex justify-content-center">
-                            <img class="img-fluid" src="img/user.png" alt="">
+                            <img class="img-fluid" src="img/user.png" alt="imagen usuario">
                         </div>
                         <div class="d-flex flex-column align-items-center">
                             <h3 class="fw-bold mt-5 mb-3">Post Title</h3>
@@ -106,7 +110,7 @@
                     </article>
                     <article class="border-bottom mb-5">
                         <div class="d-flex justify-content-center">
-                            <img class="img-fluid" src="img/user.png" alt="">
+                            <img class="img-fluid" src="img/user.png" alt="imagen usuario">
                         </div>
                         <div class="d-flex flex-column align-items-center">
                             <h3 class="fw-bold mt-5 mb-3">Post Title</h3>
@@ -123,7 +127,7 @@
                     </article>
                     <article class="border-bottom mb-5">
                         <div class="d-flex justify-content-center">
-                            <img class="img-fluid" src="img/user.png" alt="">
+                            <img class="img-fluid" src="img/user.png" alt="imagen usuario">
                         </div>
                         <div class="d-flex flex-column align-items-center">
                             <h3 class="fw-bold mt-5 mb-3">Post Title</h3>
@@ -139,6 +143,8 @@
                         </div>
                     </article>
                 </div>
+
+                <!-- SECCION ASIDE-->
                 <div class="col-md-4">
                     <aside>
                         <h2 class="text-center mb-5">Aside</h2>
