--- a/contacto.html
+++ b/contacto.html
@@ -20,8 +20,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Contact CodeRack</title>
-    <meta name="description" content="Contact coderack.">
-    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
+    <meta name="description" content="Section to contact us and to send us all your requests and inquiries.">
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder, contact, infor, work"/>
 </head>
 
 <body>
@@ -75,6 +75,8 @@
         <div class="container-xl px-5 py-5 mb-5 seccion1 border-bottom">
             <h2 class="text-center text-uppercase mb-5 titulo-galeria border-bottom pb-3">Contact with Verification</h2>
             <div class="row justify-content-center">
+
+                <!-- SECCION FORM-->
                 <form class="col-md-8 needs-validation" novalidate>
                     <fieldset>
                         <legend class="bg-primary text-center text-white fs-2 fw-bold">Your Info</legend>
