--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Home CodeRack</title>
     <meta name="description" content="Coderack is a company which is based on clean and efficient code, hire us to design and improve your website.">
-    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder, index, inicio, coderackpower"/>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-
+                <!-- NAVBAR LINKS -->
                 <div id="navegacion" class="collapse navbar-collapse">
                     <nav class="navbar-nav container d-flex flex-md-row text-center justify-content-md-between pt-3">
                         <a class="activa text-dark text-decoration-none fw-bold mb-2 ns-1" href="index.html">Home</a>
