--- a/galeria.html
+++ b/galeria.html
@@ -23,8 +23,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Gallery CodeRack</title>
-    <meta name="description" content="Coderack Gallery where you can see some of our projects.">
-    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
+    <meta name="description" content="Coderack Gallery where you can see some of our projects, also see the type of work we design.">
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder, gallery, images, works"/>
 </head>
 
 <body>
@@ -73,6 +73,7 @@
 
     <!-- galeria -->
     <main class="container-xl py-5">
+        <div class="container-xl px-5 py-5 mb-5 seccion1 border-bottom">
         <h2 class="text-center text-uppercase mb-5 titulo-galeria">Some of our projects</h2>
         <div class="d-flex justify-content-center pb-5 mb-5 border-bottom">
             <iframe width="760" height="415" src="https://www.youtube.com/embed/sklF74OW3eI"
@@ -80,6 +81,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+
         <h2 class="text-center my-5 display-3">Galería</h2>
 
         <ul class="row list-unstyled galeria">
@@ -140,6 +142,7 @@
                 </a>
             </li>
         </ul>
+    </div>
     </main>
 
     <!-- ventana modal con bootstrap -->
