--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
     <title>Our CodeRack</title>
-    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder"/>
+    <meta name="description" content="In this section you will find information about us and our values and competences.">
+    <meta name="keywords" content="html, css, sass, seo, javascript, web, design, coder, our, info"/>
     
 </head>
 
